Working client generation
