# LunchFinder/Api/swagger.yaml
@@ -1,16 +1,17 @@
-openapi: 3.0.1
+x-generator: NSwag v14.0.7.0 (NJsonSchema v11.0.0.0 (Newtonsoft.Json v13.0.0.0))
+openapi: 3.0.0
 info:
-  title: LunchFinder.Server
-  version: '1.0'
+  title: My Title
+  version: 1.0.0
 paths:
   /api/Tags:
     get:
       tags:
-        - Tag
+      - Tag
       operationId: GetAllTags
       responses:
-        '200':
-          description: OK
+        200:
+          description: ''
           content:
             application/json:
               schema:
@@ -19,95 +20,97 @@ paths:
                   $ref: '#/components/schemas/Tag'
     post:
       tags:
-        - Tag
+      - Tag
       operationId: CreateTag
       requestBody:
+        x-name: tag
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Tag'
         required: true
+        x-position: 1
       responses:
-        '201':
-          description: Created
+        201:
+          description: ''
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tag'
-  '/api/Tags/{id}':
+  /api/Tags/{id}:
     get:
       tags:
-        - Tag
+      - Tag
       operationId: GetTagById
       parameters:
-        - name: id
-          in: path
-          required: true
-          style: simple
-          schema:
-            type: integer
-            format: int32
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
       responses:
-        '200':
-          description: OK
+        200:
+          description: ''
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tag'
-        '404':
-          description: Not Found
+        404:
+          description: ''
     put:
       tags:
-        - Tag
+      - Tag
       operationId: UpdateTag
       parameters:
-        - name: id
-          in: path
-          required: true
-          style: simple
-          schema:
-            type: integer
-            format: int32
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
       requestBody:
+        x-name: tag
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Tag'
         required: true
+        x-position: 2
       responses:
-        '200':
-          description: OK
-        '404':
-          description: Not Found
+        200:
+          description: ''
+        404:
+          description: ''
     delete:
       tags:
-        - Tag
+      - Tag
       operationId: DeleteTag
       parameters:
-        - name: id
-          in: path
-          required: true
-          style: simple
-          schema:
-            type: integer
-            format: int32
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+        x-position: 1
       responses:
-        '200':
-          description: OK
-        '404':
-          description: Not Found
+        200:
+          description: ''
+        404:
+          description: ''
 components:
   schemas:
     Tag:
       type: object
+      additionalProperties: false
       properties:
         id:
           type: integer
           format: int32
         name:
           type: string
-          nullable: true
         description:
           type: string
-          nullable: true
-      additionalProperties: false
